--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@
         @apply bg-ninona-pink text-white;
     }
 }
+
+@keyframes text-gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    100% {
+        background-position: 100% 50%;
+    }
+}
+
+.animate-gradient-slow {
+    animation: text-gradient 8s linear infinite;
+    background-size: 200% auto;
+}
